[package]
name = "debug-log"
version = "0.1.4"
edition = "2021"
description = "Dead simple log utils for debug. Filter and group logs."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/zxch3n/debug-log"
repository = "https://github.com/zxch3n/debug-log"
authors = ["zxch3n <remch183@outlook.com>"]
keywords = ["debug", "log"]
include = ["Cargo.toml", "**/*.rs"]
documentation = "https://docs.rs/debug-log"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.17.1"
wasm-bindgen = { version = "0.2.86", optional = true }

[features]
wasm = ["wasm-bindgen"]
