[package]
name = "debug-log"
version = "0.3.1"
edition = "2021"
description = "dbg! and eprintln! that only run on debug mode. WASM is supported."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/zxch3n/debug-log"
repository = "https://github.com/zxch3n/debug-log"
authors = ["zxch3n <remch183@outlook.com>"]
keywords = ["debug", "log"]
include = ["Cargo.toml", "**/*.rs"]
documentation = "https://docs.rs/debug-log"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.17.1"
wasm-bindgen = { version = "0.2", optional = true }

[features]
wasm = ["wasm-bindgen"]
